syntax = "proto3";
option go_package = "./pb";
service Auth {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (User) {}
    rpc AuthUser(AuthUserRequest) returns (User) {}
    rpc GetUser(GetUserRequest) returns (User) {}
    rpc DeleteUser(GetUserRequest) returns (Status) {}
    rpc UpdateUser(User) returns (User) {}
    rpc ChangePassword(ChangePasswordRequest) returns (Status) {}
}

message User {
    string id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    string place_of_living = 6;
    string role = 7;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
    string place_of_living = 6;
    string role = 7;
}

message AuthUserRequest {
    string token = 1;
}

message GetUserRequest {
    string id = 1;
}

message Status {
    string status = 1;
}

message ChangePasswordRequest {
    string id = 1;
    string old_password = 2;
    string new_password = 3;
}
